Added websocket + ui
